[TAIGA-#443] Fix [TAIGA-#445] Change families to family

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -197,7 +197,7 @@
                                 <div class="pull-right">
                                     <ul class="chart-legend clearfix">
                                         <li><i class="fa fa-circle-o text-red"></i><a href="{% url 'publicusers:showconn' %}?conn_type=Friend"> {% trans " Friends" %}</a></li>
-                                        <li><i class="fa fa-circle-o text-green"></i><a href="{% url 'publicusers:showconn' %}?conn_type=Family"> {% trans " Families" %}</a></li>
+                                        <li><i class="fa fa-circle-o text-green"></i><a href="{% url 'publicusers:showconn' %}?conn_type=Family"> {% trans " Family" %}</a></li>
                                         <li><i class="fa fa-circle-o text-yellow"></i><a href="{% url 'publicusers:showconn' %}?conn_type=Contact"> {% trans " Contacts" %}</a></li>
                                     </ul>
                                 </div>
