--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -114,9 +114,11 @@
 							<a href="{% url 'messaging:index' %}">{% trans "Messages" %}</a>
 						</li>
 						{% endif %}
+						{% ifequal 'SITE_TYPE' 'beta' %}
 						{% if request.user.profile.information_link_visible %}
 						<li><a href="{% url 'information:index' %}">{% trans "information" %}</a></li>
 						{% endif %}
+						{% endifequal %}
 						{% if request.user.profile.hashtagcampaign_link_visible %}
 						<li><a href="{% url 'hashtag:index' %}">{% trans "Hashtag" %}</a></li>
 						{% endif %}
