--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -37,7 +37,7 @@
                     <h3 class="box-title">{% trans "Signups" %}</h3>
                     <div class="box-tools pull-right">
                         <form class="form-inline">
-                            Search: <input type="text" placeholder="Type username to search" class="form-control" id="qsignup">
+                            Search: <input type="text" placeholder="Type username or email to search" class="form-control" id="qsignup">
                             Filter By:
                             <select class="selectpicker" id="sfilter">
                                 <option value="pending">{% trans "Pending" %}</option>
@@ -249,10 +249,10 @@
             $("#signupboxbody").load('{% url 'autosignup:filter_signup' %}?sfilter=' + value);
         })
         $("#qsignup").on('keyup', function(){
-            var username = $(this).val();
+            var query = $(this).val();
             var sfilter = $('#sfilter').val();
-            if (username.length > 1) {
-                $("#signupboxbody").load('{% url 'autosignup:search_signup' %}?sfilter=' + sfilter + '&username=' + username);
+            if (query.length > 1) {
+                $("#signupboxbody").load('{% url 'autosignup:search_signup' %}?sfilter=' + sfilter + '&query=' + query);
             }
             else {
                 $("#signupboxbody").load('{% url 'autosignup:filter_signup' %}?sfilter=' + sfilter);
