--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -9,5 +9,5 @@
 
 <p>{% trans "This account is inactive." %}</p>
 
-<a href="{% url 'landing:index' %}#contactrequest">{% trans "Please send us a message if you want to activate again" %}</a>
+<a href="{% url 'landing:index' %}#contactrequest">{% trans "Please send us a message if you wish to reactive" %}</a>
 {% endblock %}
