[FIXED] Some signups were not shown when searched using email in GCsignups admin

--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -252,7 +252,7 @@
             var query = $(this).val();
             var sfilter = $('#sfilter').val();
             if (query.length > 1) {
-                $("#signupboxbody").load('{% url 'autosignup:search_signup' %}?sfilter=' + sfilter + '&query=' + query);
+                $("#signupboxbody").load('{% url 'autosignup:search_signup' %}?sfilter=' + sfilter + '&query=' + encodeURIComponent(query));
             }
             else {
                 $("#signupboxbody").load('{% url 'autosignup:filter_signup' %}?sfilter=' + sfilter);
