--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -218,7 +218,7 @@
           <div class="modal-body" id="signupbody">
             <p>
               Starting Sept 1st, your Grantcoin wallet will no longer be accessible from the Ekata Social site. <br />
-              It is in the process of being migrated to a new site by the Grantcoin Foundation per agreement.
+              Your wallet is being migrated to a new site by the Grantcoin Foundation per agreement.
               <a href="http://grantcoin.org/2017/08/30/manna-relaunch-progress-report">grantcoin.org/2017/08/30/manna-relaunch-progress-report</a> <br />
               Please contact jon@grantcoin.org for all related questions.
             </p>
