--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -64,7 +64,7 @@
                                     <h4>{% trans "Grantcoin" %}</h4>
                                 </div>
                                 <div class="community-actions">
-                                    <a href="#" data-toggle="modal" data-target='#signupmodal' class="btn btn-block btn-flat btn-default">{% trans "Signup" %}</a>
+                                    <a href="#" data-toggle="modal" data-target='#signupmodal' class="btn btn-block btn-flat btn-default">{% trans "Notice" %}</a>
                                     {% comment %}
                                     {% if communitysignup %}
                                         {% if communitysignup.data_collect_done %}
