[TAIGA-#481] Landing remove Grantcoin section

--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -103,6 +103,7 @@
 </section>
 <!-- end vision -->
 
+{% comment %}
 <!-- begin social responsibilty -->
 <section id="grantcoin">
 	<div class="container">
@@ -120,6 +121,7 @@
 	</div>
 </section>
 <!-- end social responsibilty -->
+{% endcomment %}
 
 <!-- start installer
 <section id="installer">
