Chnaged some links in client

--- a/frontend_src/client/components/LeftNav/LeftNav.styl
+++ b/frontend_src/client/components/LeftNav/LeftNav.styl
@@ -150,7 +150,7 @@ icon_color = #878787
 	.user-image
 		dimensions profile_pic_size
 		border-radius 50%
-		background-color rgba(#000, 0.4)
+		//background-color rgba(#000, 0.4)
 		margin-right 12px
 		flex-shrink 0
 
