[ADDED] User info and onlinesetter to frontend

--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -116,3 +116,8 @@ body
 		color theme_primary
 		z-index 100
 		background-color #fff
+
+.ui-avatar
+	width inherit !important
+	height inherit !important
+	text-transform capitalize
