[ADDED] emoji to messenger

--- a/templates/react_template.html
+++ b/templates/react_template.html
@@ -10,7 +10,7 @@
     <style>
         #nprogress .bar {
 			z-index: 3000 !important;
-		}
+        }
     </style>
     <script>
         window.webpackManifest = {{ manifest_data|safe }};
@@ -44,6 +44,7 @@
                     'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600',
                     '/static/bundles/vendor/animate.css',
                     '/static/bundles/vendor/font-awesome/css/font-awesome.css',
+                    '/static/bundles/vendor/emoji-mart/css/emoji-mart.css',
                 ];
 
 
