--- a/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
+++ b/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
@@ -13,10 +13,11 @@
 			left 0
 			right initial
 		.msg
-			order 2
+			order 3
 		.ui-avatar
+			order 2
+		.selectmessage
 			order 1
-			margin-left 0
 
 	.msg
 		margin-left 4px
@@ -32,6 +33,9 @@
 		margin-left 4px
 		width 24px !important
 		height 24px !important
+	
+	.selectmessage
+		order 3
 
 	.stamp
 		font-size 10px
