[ADDED][MESSENGER] User is typing function

--- a/frontend_src/client/components/ChatFooter/ChatFooter.styl
+++ b/frontend_src/client/components/ChatFooter/ChatFooter.styl
@@ -79,3 +79,9 @@
 			outline none
 			border-color theme_primary
 			box-shadow 0 2px 6px 0 rgba(#000, 0.23)
+	
+	.chat-user-typing
+		position relative
+		top -50%
+		left 2%
+		color #878787
