[FIXED][MESSENGER] Some bugs

--- a/frontend_src/client/components/ChatFooter/ChatFooter.styl
+++ b/frontend_src/client/components/ChatFooter/ChatFooter.styl
@@ -72,7 +72,7 @@
 		height 42px
 		outline none
 		font-weight font_light
-		padding 0 20px
+		padding 0 40px 0 20px
 		transition all 0.16s ease
 		absolute left right
 		&:hover, &:focus
