--- a/frontend_src/client/pages/Messenger/Messenger.styl
+++ b/frontend_src/client/pages/Messenger/Messenger.styl
@@ -65,7 +65,7 @@ sidebar_width = 250px
 			font-size 16px
 
 	.chatview-body
-		min-height 250px
+		min-height auto
 		overflow-y auto
 		padding 20px
 		background-color #f2f2f2
