[FIXED][MESSENGER] Footer and firefox scrolling issue

--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -2,15 +2,23 @@
 .flex-vertical
 	display flex
 	flex-direction column
+	min-height 0
+	min-width 0
 .flex-vertical-reverse
 	display flex
 	flex-direction column-reverse
+	min-height 0
+	min-width 0
 .flex-horizontal
 	display flex
 	flex-direction row
+	min-height 0
+	min-width 0
 .flex-horizontal-reverse
 	display flex
 	flex-direction row-reverse
+	min-height 0
+	min-width 0
 .a-center
 	align-items center
 .a-stretch
