--- a/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
+++ b/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
@@ -25,8 +25,35 @@
 		shadow()
 		padding 3px 8px
 		order 1
-		display inline-flex
+		display block
 		border-radius 5px
+
+		.emoji-mart-emoji
+			left 0
+			top 5px
+	
+	.img-attachment
+		width 400px
+		height auto
+		padding 10px
+		+mobile()
+			width 250px
+		img 
+			width 100%
+			height 100%
+			object-fit contain
+			border-radius 10px
+	
+	.file-attachment
+		padding 5px 0
+		.fa
+			font-size 15px
+			margin-right 5px
+			color rgba(0, 0, 0, 0.5)
+		a
+			color rgba(0, 0, 0, 0.5)
+			text-decoration none
+
 
 	.ui-avatar
 		order 2
