--- a/templates/react_template_local.html
+++ b/templates/react_template_local.html
@@ -9,7 +9,12 @@
     <style id="server-css" type="text/css" rel="stylesheet"></style>
     <style>
         #nprogress .bar {
-			z-index: 3000 !important;
+            z-index: 3000 !important;
+            background: #ff9800 !important;
+        }
+        #nprogress .spinner-icon {
+            border-top-color: #ff9800 !important;
+            border-left-color: #ff9800 !important;
         }
     </style>
     <script>
