[ADDED][MESSENGER] Change input placeholder based on attachment [CHANGED][MESSENGER] Loading animation [CHANGED][MESSENGER] Attachment will now load in new window [ADDED][MESSENGER] Video player

--- a/frontend_src/client/components/ChatFooter/ChatFooter.styl
+++ b/frontend_src/client/components/ChatFooter/ChatFooter.styl
@@ -88,3 +88,12 @@
 
 	.file-load-indicator
 		color theme_primary
+
+	.file-upload-bar
+		background-color  #ddd
+		width 0
+		height 42px
+		position absolute
+		top 0
+		overflow hidden
+		border-radius 21px
