--- a/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
+++ b/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
@@ -44,6 +44,19 @@
 			object-fit contain
 			border-radius 10px
 	
+
+	.video-attachment
+		width 400px
+		height auto
+		padding 10px
+		+mobile()
+			width 250px
+		video
+			width 100%
+			height 100%
+			object-fit contain
+			border-radius 10px
+	
 	.file-attachment
 		padding 5px 0
 		.fa
