--- a/frontend_src/client/components/HeaderMiniChat/HeaderMiniChat.styl
+++ b/frontend_src/client/components/HeaderMiniChat/HeaderMiniChat.styl
@@ -18,13 +18,6 @@
     border-bottom 1px rgba(#000, 0.12) solid
 
 
-
-    .ui-avatar
-        width 42px
-        height 42px
-        flex-shrink 0
-        margin-right 20px
-
     .item-details
         overflow hidden
 
@@ -36,6 +29,12 @@
         overflow hidden
         white-space nowrap
         text-overflow ellipsis
+    .item-image
+        width 42px
+        height 42px
+        flex-shrink 0
+        margin-right 5px
+        margin-top 5px
 
 
 :local(.miniChatHolder)
