[MODIFIED][MESSENGER] Read status sync with server [FIXED][MESSENGER] Scroll to bottom [ADDED][MESSENGER] Play audio if room is not open

--- a/frontend_src/client/components/HeaderMiniChat/HeaderMiniChat.styl
+++ b/frontend_src/client/components/HeaderMiniChat/HeaderMiniChat.styl
@@ -35,6 +35,8 @@
         flex-shrink 0
         margin-right 5px
         margin-top 5px
+    &.has_unread
+        color theme_primary
 
 
 :local(.miniChatHolder)
