--- a/frontend_src/client/pages/Messenger/Messenger.styl
+++ b/frontend_src/client/pages/Messenger/Messenger.styl
@@ -151,6 +151,8 @@ sidebar_width = 250px
 		&.is-active
 			z-index 300
 			background-color #f2f2f2
+		&.has-unread
+			color #4f4f4f
 
 		.item-image
 			width 42px
