[FIXED][MESSENGER] CSS fix

--- a/frontend_src/client/components/ChatFooter/ChatFooter.styl
+++ b/frontend_src/client/components/ChatFooter/ChatFooter.styl
@@ -33,6 +33,10 @@
 			right 0px
 			width calc(100% + 68px)
 
+		.file-upload-bar
+			left -66px
+			height 30px
+
 
 		.chat-input-wrap .chat-input-btn,
 		.chat-input-box,
