--- a/frontend_src/client/pages/Messenger/Messenger.styl
+++ b/frontend_src/client/pages/Messenger/Messenger.styl
@@ -71,6 +71,8 @@ sidebar_width = 250px
 		background-color #f2f2f2
 		clearfix()
 		// box-shadow 0px 0px 12px 0 rgba(#000, 0.12)
+		+mobile()
+			padding 0
 
 	.chat-body-item
 		// border 1px rgba(#000, 0.1) solid
