--- a/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
+++ b/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
@@ -31,6 +31,11 @@
 		.emoji-mart-emoji
 			left 0
 			top 5px
+		
+	.link-div
+		+mobile()
+			width 250px
+			word-wrap break-word
 	
 	.img-attachment
 		width 400px
@@ -43,6 +48,8 @@
 			height 100%
 			object-fit contain
 			border-radius 10px
+		&.small
+			width 160px
 	
 
 	.video-attachment
@@ -56,6 +63,8 @@
 			height 100%
 			object-fit contain
 			border-radius 10px
+		&.small
+			width 160px
 	
 	.file-attachment
 		padding 5px 0
