[ADDED][TAIGA-516] The ability to upload and attach an image

--- a/frontend_src/client/components/ui/Modal/Modal.styl
+++ b/frontend_src/client/components/ui/Modal/Modal.styl
@@ -21,6 +21,15 @@
 	&.is-open :local(.detachedfooter)
 		animation fadeInUp 0.2s
 
+	.dropped-files
+		margin-top 10px
+		height 55px
+		overflow hidden
+		overflow-y auto
+		ul
+			padding 0
+			list-style none
+
 :local(.backdrop)
 	background-color rgba(#000, 0.5)
 
