--- a/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
+++ b/frontend_src/client/components/ChatBodyItem/ChatBodyItem.styl
@@ -32,37 +32,35 @@
 			left 0
 			top 5px
 		
-	.link-div
-		+mobile()
-			width 250px
-			word-wrap break-word
+	.Linkify a
+			word-break break-all
 	
 	.img-attachment
-		width 400px
+		max-width 400px
 		height auto
-		padding 10px
+		padding 5px
 		+mobile()
-			width 250px
+			max-width 250px
 		img 
 			width 100%
 			height 100%
 			object-fit contain
-			border-radius 10px
+			border-radius 5px
 		&.small
 			width 160px
 	
 
 	.video-attachment
-		width 400px
+		max-width 400px
 		height auto
-		padding 10px
+		padding 5px
 		+mobile()
-			width 250px
+			max-width 250px
 		video
 			width 100%
 			height 100%
 			object-fit contain
-			border-radius 10px
+			border-radius 5px
 		&.small
 			width 160px
 	
